[gd_scene load_steps=4 format=3 uid="uid://dne3c0oeuid31"]

[ext_resource type="Script" uid="uid://ssh85mcwj8br" path="res://scripts/now_playing_screen.gd" id="1_6ucpr"]
[ext_resource type="Texture2D" uid="uid://eg8eimho6p7k" path="res://assets/sprites/progress-bar-under.png" id="2_mbc7h"]
[ext_resource type="Texture2D" uid="uid://bip3hbw4dsb7x" path="res://assets/sprites/progress-bar-progress.png" id="3_mbc7h"]

[node name="NowPlayingScreen" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6ucpr")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="ArtistLabel" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="AlbumLabel" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
texture_under = ExtResource("2_mbc7h")
texture_progress = ExtResource("3_mbc7h")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ElapsedTimeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RemainingTimeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
